# aelita

./: .env  .gitignore  Cargo.toml  README.md
commons/: Cargo.toml
commons/src/: err_utils.rs  lib.rs  log.rs  logs.rs
etc/: dev.md  neat_features.md
stor_diesel/: .env  Cargo.toml  diesel.toml  setup.txt
stor_diesel/etc/: mysql-defaults.ini
stor_diesel/migrations/: .gitignore  users.sql
stor_diesel/migrations/0_init/: down.sql  up.sql
stor_diesel/migrations/0_txdb/: down.sql  up.sql
stor_diesel/migrations/1_init/: down.sql  up.sql
stor_diesel/migrations/1_init_journal/: down.sql  up.sql
stor_diesel/migrations/2020-02-02-020202_init/: down.sql  up.sql
stor_diesel/migrations/2025-01-22-120728_create_posts/: down.sql  up.sql
stor_diesel/migrations/2025-01-23-102532_create_posts/: down.sql  up.sql
stor_diesel/migrations/2025-01-23-125121_create_posts/: down.sql  up.sql
stor_diesel/migrations/2025-01-24-012313_create_posts/: down.sql  up.sql
stor_diesel/migrations/2_init_core/: down.sql  up.sql
stor_diesel/migrations/3_init_tor/: down.sql  up.sql
stor_diesel/migrations/4_init_hd/: down.sql  up.sql
stor_diesel/scripts/: diesel-clean.sh  diesel-diff.sh  diesel-migrate.sh  diesel-reset.sh  diesel-revert-all.sh  diesel-revert.sh  diesel-schema.sh  mysql.sh
stor_diesel/src/: common.rs  connection.rs  date_wrapper.rs  err.rs  example_structure.rs  lib.rs  path_const.rs  schema.rs  schema_temp.rs  util.rs
stor_diesel/src/api/: api_hd.rs  api_hd_mut.rs  api_hd_paths.rs  api_hd_roots_mut.rs  api_journal.rs  api_project.rs  api_project_laser.rs  api_registry_ids.rs  api_space.rs  api_space_mut.rs  api_tor.rs  api_tor_mut.rs  api_variables.rs  api_xrn_registry.rs  boot_enums.rs  bulk_insert.rs  common.rs  fancy_chunk.rs  mod.rs
stor_diesel/src/api/hd_path/: convert.rs  display.rs  local_builder.rs  local_builder2.rs  megacol_builder.rs  megacol_parents.rs  mod.rs  tree_queries.rs
stor_diesel/src/change/: change.rs  change_hd.rs  changer_hd.rs  defs.rs  mod.rs
stor_diesel/src/models/: common.rs  compressed_encode.rs  compressed_paths.rs  compressed_tree.rs  date.rs  diesel_opt.rs  diesel_wrappers.rs  enum_types.rs  id_types.rs  macro_gen.rs  mod.rs  model_hd.rs  model_hd_roots.rs  model_journal.rs  model_project.rs  model_project_laser.rs  model_project_names.rs  model_registry_ids.rs  model_space.rs  model_tor.rs  model_variables.rs  projects_model.rs  util_types.rs  xrn_registry.rs
stor_diesel/src/tests/: todo_list.rs
stor_import/: Cargo.toml
stor_import/src/: err.rs  lib.rs  path_const.rs  util.rs
stor_import/src/importers/: impl_calls.rs  mod.rs  page_calls.rs  router.rs
stor_import/src/importers/change_op_v1/: changer.rs  commit.rs  mod.rs
stor_import/src/importers/firefox_history_v1/: mod.rs
stor_import/src/importers/n_data_v1/: change.rs  commit.rs  defs.rs  fetch.rs  mod.rs  path_backup.rs
stor_import/src/importers/qb_get_tor_json_v1/: commit.rs  defs.rs  fetch.rs  mod.rs
stor_import/src/integ_test/: migration_sql_caller.rs  mod.rs  sim_lyoko.rs
www/: Cargo.toml
www/html/: base_html.hbs  browse_journal.hbs  browse_paths.hbs  browse_space.hbs  browse_tor.html  page_projects.html  page_projects.html.hbs  page_xrns.html  xrn_path.hbs
www/scripts/: base.css  searcher.css  searcher.js
www/src/: err.rs  lib.rs  log.rs  main.rs  server.rs  template_util.rs
www/src/controllers/: handlebars.rs  mod.rs  sqlcontroller.rs  state.rs
www/src/pages/: base_html.hbs  base_html.rs  browse_journal.hbs  browse_journal.rs  browse_paths.hbs  browse_paths.rs  browse_tor.hbs  browse_tor.html  browse_tor.rs  fallback.rs  handle_project.rs  handle_registry.rs  handle_root.rs  handle_xrns.rs  mod.rs  xrn_journal.hbs  xrn_journal.rs  xrn_path.hbs  xrn_path.rs  xrn_space.rs  xrns.rs
www/src/server/: convert_xrn.rs  mod.rs  start_server.rs  util.rs
xrn/: Cargo.toml
xrn/src/: err.rs  lib.rs
xrn/src/defs/: address.rs  common.rs  mod.rs  path_xrn.rs  project_xrn.rs  space_xrn.rs
