[workspace]
members = ["commons", "stor_diesel", "www", "xrn"]
resolver = "2"

default-members = ["www"]

[profile.release]
lto = "fat"

#
# Global Dependencies
#
[workspace.dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.138" }
thiserror = "2.0.11"
chrono = { version = "0.4.39", features = ["serde"] }