[workspace]
members = ["commons", "stor_diesel", "stor_import", "www", "xrn"]
resolver = "2"

default-members = ["www"]

#[profile.release]
#lto = "fat"

#
# Global Dependencies
#
[workspace.dependencies]
xana-commons-rs = { path = "../xana-commons-rs", features = ["qbittorrent"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.138" }
thiserror = "2.0.11"
chrono = { version = "0.4.39", features = ["serde"] }
strum = { version = "0.27", features = ["derive"] }
bytes = { version = "1.11" }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
