[workspace]
members = ["commons", "stor_diesel", "stor_import", "www", "xrn"]
resolver = "2"

default-members = ["www"]

[profile.release]
#lto = "fat"
debug = true

#
# Global Dependencies
#
[workspace.dependencies]
xana-commons-rs = { path = "../xana-commons-rs/xana-commons-rs", features = ["qbittorrent"] }
xana-fs-indexer-rs = { path = "../xana-fs-indexer-rs" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.138" }
thiserror = "2.0.11"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
strum = { version = "0.27", features = ["derive"] }
bytes = { version = "1.11" }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
zstd = { version = "0.13.3" }
postcard = { version = "1.1", features = ["alloc"] }

#[patch.crates-io]
#diesel = { path = "../diesel/diesel" }

