[package]
name = "aelita_stor_diesel"
version = "0.1.0"
edition = "2024"

[dependencies]
aelita_commons = { path = "../commons" }
#aelita_xrn = { path = "../xrn" }
#
xana-commons-rs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
strum = { workspace = true }
#
diesel = { version = "2.3.4", features = ["mysql", "chrono"] }
zstd = "0.13.2"
tokio = { workspace = true }
