[package]
name = "aelita_stor_diesel"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
aelita_commons = { path = "../commons" }
aelita_xrn = { path = "../xrn" }
#
xana-commons-rs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
strum = { workspace = true }
#
#version = "2.3"
diesel = { version = "2.3.4", default-features = false, features = ["mysql", "chrono"] }
postcard = { version = "1.1", features = ["alloc"] }
itertools = "0.14"
fxhash = "0.2"
indexmap = "2.12.1"

