[package]
name = "aelita_stor_diesel"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
aelita_commons = { path = "../commons" }
aelita_xrn = { path = "../xrn" }
#
xana-commons-rs = { workspace = true }
xana-fs-indexer-rs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
strum = { workspace = true }
#
#version = "2.3"
diesel = { version = "2.3.5", default-features = false, features = ["mysql", "chrono", "32-column-tables"] }
postcard = { workspace = true }
itertools = "0.14"
sha2 = "0.10.9"
url = "2.5.8"
tempfile = "3.24.0"
