[package]
name = "aelita_stor_import"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
aelita_stor_diesel = { path = "../stor_diesel" }
xana-commons-rs = { workspace = true }
#
bytes = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }