[package]
name = "aelita_www"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
aelita_commons = { path = "../commons" }
aelita_stor_diesel = { path = "../stor_diesel" }
aelita_xrn = { path = "../xrn" }
#
xana-commons-rs = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
strum = { workspace = true }
axum = { version = "0.8.2", features = ["macros"] }
tokio = { version = "1.43", features = ["full"] }
deadpool-diesel = { version = "0.6.1", features = ["mysql"] }
itertools = "0.14.0"
handlebars = "6.3.0"
zstd = "0.13.2"
tower-http = { version = "0.6.7", features = ["trace"] }

